--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "ts-node ./src/server/listen.ts",
+    "lint": "eslint src/**/*.ts",
     "test": "mocha -r ts-node/register src/**/*.test.ts"
   },
   "author": "",
@@ -18,7 +19,7 @@
     "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
-    "typescript": "^4.9.4",    "@types/bcrypt": "^5.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/chai": "^4.3.4",
     "@types/cors": "^2.8.13",
@@ -28,12 +29,15 @@
     "@types/node": "^18.11.17",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.10",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "chai": "^4.3.7",
+    "eslint": "^8.33.0",
+    "eslint-plugin-react": "^7.32.2",
     "mocha": "^10.2.0",
     "supertest": "^6.3.3",
     "ts-mock-imports": "^1.3.8",
-    "ts-node": "^10.9.1"
-
-
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
